<resources>

    <string name="empty"></string>
    <!-- Menu Principal strings -->
    <string name="app_name">ReversiMania</string>
    <string name="comenca_partida">Començar Partida</string>
    <string name="sortir">Sortir</string>
    <string name="menu_principal">Menu Principal</string>
    <string name="ayuda">Ayuda</string>
    <string name="consulta_partida">Consultar Partides</string>

    <!-- AyudaActivity  strings -->
    <string name="ajuda">Ajuda</string>
    <string name="hello_message">Benvingut al joc de REVERSI!</string>
    <string name="info_message">
        El joc consisteix en omplir el tauler amb el màxim nombre de fitxes del teu color (negre), fent girar les fitxes de l\'oponent (l\'app) que són blanques.
        A cada torn, el jugador col·loca una fitxa en una casella budia, de manera que entre aquesta i una altra del mateix color s\'encercli una o més fitxes de l\'oponent. Les fitxes entre ambdues queden automàticament convertides al color de qui ha tirat.
        Les línies compten en horitzontal, vertical i diagonal. Una mateixa fitxa pot capturar peces en diferent línies, si aconsegueix encerclar-les d\'aquest maiteix color.
        Si un jugador no pot col·locar cap fitxa de la manera descrita, perd el torn. Continua l\'alternança fins que cap dels dos pot col·locar una fitxa o bé tot el tauler ha quedat cobert de fitxes.
        Guanya el jugadro que ha conseguit col·locar més fitxes del seu color.
    </string>
    <string name="anar_joc">Anar al joc</string>

    <!--- Sortir -->
    <string name="sortir_joc">Reversi s\'ha tancat correctament</string>

    <!--- Configuració -->
    <string name="comenca">Començar</string>
    <string name="configuracio">Configuració</string>
    <string name="alias">Alias Identificatiu:</string>
    <string name="mida_graella">Mida graella:</string>
    <string name="control_temps">Control del temps:</string>
    <string name="nom_usuari">Nom Usuari</string>
    <string name="opcio_1">8</string>
    <string name="opcio_2">6</string>
    <string name="opcio_3">4</string>
    <string name="falta_alias">  Introdueix un Alias  </string>
    <string name="falta_dimension">  Introdueix una mida  </string>

    <!--- Desarrollo Juego -->
    <string name="partida">Partida</string>
    <string name="info_caselles">Tu: \'%s\'  Oponent: \'%s\' \nCaselles Pendents: \'%s\' </string>
    <string name="estat">Estat partida: %s !</string>
    <string name="en_marxa">En Marxa</string>
    <string name="finalitzada">FINALITZADA</string>
    <string name="pulsa_casilla">Presiona una casella per començar.</string>
    <string name="casella_incorrecta">Casella incorrecta!</string>


    <!--- ResultadosActivity Juego -->
    <string name="resultados">Resultat</string>
    <string name="resultados_partida">Resultats Partida</string>
    <string name="dia_hora">Dia i hora:</string>
    <string name="valores_log">Resultat de la partida:</string>
    <string name="email">Email:</string>
    <string name="email_defecto">pepitogrillo@gmail.com</string>
    <string name="nova_paritda">Nova Partida</string>
    <string name="enviar_email">Enviar e-mail</string>

    <!--- ResultadosActivity partida -->
    <string name="victoria">Ben fet, has guanyat!!</string>
    <string name="perdida">Mala sort, has perdut!!</string>
    <string name="empate">Vaja, heu empatat!!</string>
    <string name="final_tiempo">Temps Esgotat</string>
    <string name="bloqueo">Bloqueig... us heu quedat sense poder moure cap dels 2.</string>


    <!--- Play Mode -->
    <string name="seleccion_dificultad">Selección Dificultad</string>
    <string name="solitario"> Individual</string>
    <string name="multijugador"> Multijugador</string>

    <!--- Levels -->
    <string name="seleccion_nivel">Selección Nivel</string>
    <string name="dificil"> Díficil</string>
    <string name="medio"> Media</string>
    <string name="facil"> Fácil</string>


    <!--- Resultats -->

    <string name="temps_esgotat">Has esgotat el temps!!</string>
    <string name="temps_restant">Han sobrat %s segons!</string>
    <string name="mail_to">mailTo</string>
    <string name="send_email">Send email...</string>
    <string name="type_email">message\/rfc822</string>
    <string name="victory_log">Alias %s\nMida graella: %s\nTemps total: %s secs.\n Has guanyat !! Tu %s; Oponent %s;\n%s caselles de diferencia!\n%s</string>
    <string name="draw_log">Alias %s\nMida graella: %s\nTemps total: %s secs.\n Heu empatat !!\n%s</string>
    <string name="block_log">Alias %s\nMida graella: %s\nTemps total: %s secs.\n Us heu quedat sense poder completar la graella … !! Tu %s; Oponent %s;\n%s caselles de diferencia!\nHan quedat %s caselles per cobrir\n%s</string>
    <string name="time_log">Alias %s\nMida graella: %s\nTemps total: %s secs.\n Has esgotat el temps!!\nTu %s; Oponent %s;\n%s caselles de diferencia!\nHan quedat %s caselles per cobrir</string>
    <string name="lose_log">Alias %s\nMida graella: %s\nTemps total: %s secs.\n Has perdut !! Oponent %s; Tu %s;\n%s caselles de diferencia!\n%s</string>
    <string name="asunto_correo">Partida Reversi</string>


    <!--- Intent keywords -->

    <string name="timer_key">timer</string>
    <string name="game_key">game</string>
    <string name="alias_key">alias</string>
    <string name="size_key">size</string>
    <string name="duration_key">duration</string>
    <string name="hastimer_key">hastimer</string>
    <string name="win_key">win</string>
    <string name="black_key">black</string>
    <string name="white_key">white</string>
    <string name="diferencia_key">diferencia</string>
    <string name="playmode_key">playmode</string>
    <string name="multiplayer">MULTIPLAYER</string>
    <string name="mode_easy">EASY</string>
    <string name="mode_medium">MEDIUM</string>
    <string name="mode_hard">HARD</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--- Shared Preferences -->

    <string name="pref_title">Configuración</string>

    <string name="pref_alias">Alias</string>
    <string name="pref_alias_default">Juanjo</string>
    <string name="pref_alias_key">alias_key</string>
    <string name="pref_alias_intro">Introdueix el teu Alias</string>

    <string name="pref_timer">Temporitzador</string>
    <string name="pref_timer_default">0</string>
    <string name="pref_timer_key">timer_key</string>

    <string name="pref_size">Tamany graella</string>
    <string name="pref_size_default">4</string>
    <string name="pref_size_key">size_key</string>
    <string name="pref_size_intro">Introdueix un Tamany</string>

    <string name="pref_playmode">Modalitat de joc</string>
    <string name="pref_playmode_default">facil</string>
    <string name="pref_playmode_key">playmode_key</string>
    <string name="pref_playmode_intro">Introdueix la modalitat</string>

    <!--- Times for fragment game -->

    <string name="temp_init">LOG...\n Alias= %s  Mida graella= %s\n %s\n</string>

    <string name="temp_onclick">Casella seleccionada: (%s,%s)\nNº Caselles pendents = %s\nTemps in.tirada = %s secs; Temps %s secs.\n</string>
    <string name="key_log">key_log</string>
    <string name="borrar_item">Borrar item</string>
    <string name="share">Share</string>
    <string name="modificar_item">Modificar</string>
    <string name="new_alias">Nuevo alias:</string>
    <string name="intro_new_alias">Introdueix el nou alias</string>
    <string name="aceptardialog">Aceptar</string>
    <string name="cancelardialog">Cancelar</string>
    <string name="modificar_email">Modificar Email</string>
    <string name="resultat_partida_correo">Resultat Partida</string>
    <string name="resultat_partida_email">Resultat Partida:</string>
    <string name="key_add_bd">add_info</string>
    <string name="insert_database">Inserting, Please Wait!</string>
    <string name="connect_bd">Connected to Database</string>
    <string name="cerca_partida">Cerca partida</string>
    <string name="case_sensitive">La cerca és sensible a majúscules</string>
    <string name="cerca_alias">Cerca per Alias</string>


</resources>
