<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/CtxLblOpc1"
        android:title="@string/modificar_email"
        android:orderInCategory="1"
        android:icon="@android:drawable/ic_dialog_email"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/CtxLblOpc2"
        android:title="@string/modificar_item"
        android:orderInCategory="2"
        android:icon="@drawable/modify"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/CtxLblOpc3"
        android:title="@string/borrar_item"
        android:orderInCategory="3"
        android:icon="@drawable/delete"
        app:showAsAction="ifRoom" />


</menu>