<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.radu.reversi.MenuPrincipalActivity">

    <Button
        android:id="@+id/button_individual"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/solitario"/>


    <Button
        android:id="@+id/button_multijugador"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_individual"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_vertical|center_horizontal"
        android:text="@string/multijugador"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



    <!-- Header aligned to top -->

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@color/DarkSeaGreen"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/image_reverse"
            android:layout_width="@dimen/image_reverse_size"
            android:layout_height="@dimen/image_reverse_size"
            android:layout_alignParentTop="true"
            android:src="@drawable/configuration_icon" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@+id/image_reverse"
            android:layout_marginLeft="@dimen/margin_left"
            android:text="@string/seleccion_dificultad"
            android:textSize="@dimen/text_size"
            android:textStyle="bold"/>

    </LinearLayout>





</RelativeLayout>